--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 1289px;
+    
     background-color: #FCF8F6;
 }
 
@@ -144,49 +144,37 @@ body{
     font-weight: 500;
 }
 
-.main-content {
+@media(max-width: 1200px ){
+    .main-content{
+        flex-direction: column;
+    }
 
-		// .main-content__product-list
+    .main-content--cart{
+        width: 100%;
+    }
 
-		&__product-list {
-		}
+    .main-content--product-list{
+        width: 100%;
+    }
 
-		// .main-content__cart
-
-		&__cart {
-		}
-}
-.card {
-
-		// .card__image-block
-
-		&__image-block {
-		}
-
-		// .card__info-block
-
-		&__info-block {
-		}
-}
-.add {
-
-		// .add_btn
-
-		&_btn {
-		}
-}
- 
-.cart {
-
-		// .cart__title
-
-		&__title {
-		}
-
-		// .cart__items
-
-		&__items {
-		}
+    .cart{
+        flex-grow: 1;
+    }
 }
 
+@media(max-width: 500px ){
+    
+    .main-content{
+        margin: 0;
+    }
+    
 
+    .main-content--product-list--row{
+        flex-wrap: wrap;
+    }
+
+    .main-content--product-list--row--card{
+        width: 100%;
+        flex-grow: 1;
+    }
+}
